--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.2"
+    "mongoose": "^8.0.2",
+    "multer": "^1.4.5-lts.1",
+    "mv": "^2.1.1",
+    "pdf-lib": "^1.17.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
