--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,11 @@
     "@mui/styles": "^5.14.20",
     "@reduxjs/toolkit": "^2.0.1",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-preview": "^8.0.3",
+    "react-dnd-scrolling": "^1.3.3",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-pdf": "^7.6.0",
     "react-redux": "^9.0.3",
