--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon backend/server.js"
+    "dev": "nodemon backend/server.js",
+    "server": "node backend/server.js"
   },
   "author": "",
   "license": "ISC",
