--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^8.0.2",
     "multer": "^1.4.5-lts.1",
     "mv": "^2.1.1",
-    "pdf-lib": "^1.17.1"
+    "pdf-lib": "^1.17.1",
+    "underscore": "^1.13.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
