Sample env file

--- a/sample.env
+++ b/sample.env
@@ -4,4 +4,5 @@ DEV=false
 PORT=5000
 # Enter MongoDB connection string to access DB
 MONGO_URI=
-SECRET=
+# Enter key to sign the JSON Web token
+SECRET=asd321
