Sample env file

--- a/sample.env
+++ b/sample.env
@@ -5,4 +5,4 @@ PORT=5000
 # Enter MongoDB connection string to access DB
 MONGO_URI=
 # Enter key to sign the JSON Web token
-SECRET=asd321
+SECRET=
